Modif color dashed #28a645

--- a/templates/email/resetpassword.html.twig
+++ b/templates/email/resetpassword.html.twig
@@ -27,7 +27,7 @@
           </tr>
           <tr>
             <td style="width:50px"></td>
-            <td><p style="border:2px dashed #EAE9E3; padding:15px; margin:30px; text-align:center">Votre mot de passe est : {{ user.password }}</p></td>
+            <td><p style="border:2px dashed #28a645; padding:15px; margin:30px; text-align:center">Votre mot de passe est : {{ user.password }}</p></td>
             <td style="width:50px"></td>
           </tr>
           <tr>
