--- a/templates/email/userSendMail.html.twig
+++ b/templates/email/userSendMail.html.twig
@@ -23,22 +23,7 @@
           </tr>
           <tr>
             <td style="width:50px"></td>
-            <td><p style="padding:5px">Vous avez un nouveau message à votre disposition.</p></td>
-            <td style="width:50px"></td>
-          </tr>
-          <tr>
-            <td style="width:50px"></td>
-            <td><p style="padding:5px">Veuillez consulter votre espace client Ynovagroup à cette adresse : </p></td>
-            <td style="width:50px"></td>
-          </tr>
-          <tr>
-            <td style="width:50px"></td>
-            <td><p style="padding:5px;"><a class="btn btn-success mx-auto" href="https://ynovagroup.com/connexion">Accéder à mon espace</a></p></td>
-            <td style="width:50px"></td>
-          </tr>
-          <tr>
-            <td style="width:50px"></td>
-            <td><p style="padding:10px;">L'équipe Ynovagroup</p><br></td>
+            <td><p style="padding:5px">Un nouveau message a été envoyé via le formulaire de contact du site.</p></td>
             <td style="width:50px"></td>
           </tr>
         </tbody>
