--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -84,7 +84,7 @@
                                 <p class="m-5 font-weight-lighter font-italic">
                                 Nous sommes composés d'une équipe pluridisciplinaire de pharmaciens et de professionnels du secteur pharmaceutique.
                                 <br>
-                                Notre souhait : être présents à vos côtés au quotidien pour relever les défis de l'office.
+                                Notre souhait : être présents à vos côtés au quotidien pour relever les défis de l'officine.
                             <!--Avatar-->
                                 <div class="avatar mx-auto">
                                 {% if theme.picture is defined %}
