Modif mentions légales

--- a/templates/home/mentionslegales.html.twig
+++ b/templates/home/mentionslegales.html.twig
@@ -14,7 +14,7 @@
             <p>SASU au capital social de 10000 euros</p>
             <p><strong>SIRET</strong> <br> 82448493500013 // RCS Pontoise</p>
             <p><strong>Numéro de TVA intracommunautaire</strong> <br> FR19824484935</p>
-            <p><strong>Adresse</strong> <br> 43 Grande Rue Grande Rue 95290 L’Isle-Adam</p>
+            <p><strong>Adresse</strong> <br> 43 Grande Rue 95290 L’Isle-Adam</p>
             <p><strong>Contact</strong> <br> contact@ynovagroup.com // 00 00 00 00 00</p>
             <p><strong>Responsable de la publication</strong> <br> BABICZ Stéphane</p>
             <p><strong>Déclaration à la CNIL</strong> <br> n°XXXXXXX</p>
