--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -20,6 +20,9 @@
         <a class="nav-link {{ (activePanel == 'files')? 'active' }} text-success" id="document-tab" data-toggle="tab" href="#document" role="tab" aria-controls="document" aria-selected="false">Documents</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link {{ (activePanel == 'commercial')? 'active' }} text-success" id="commercial-tab" data-toggle="tab" href="#commercial" role="tab" aria-controls="commercial" aria-selected="false">Mon commercial</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link {{ (activePanel == 'password')? 'active' }} text-success" id="password-tab" data-toggle="tab" href="#password" role="tab" aria-controls="password" aria-selected="false">Mot de passe</a>
     </li>
     </ul>
@@ -35,6 +38,10 @@
         <!--Documents-->
             {{ include('/user/_panel_documents.html.twig') }}
         <!--Documents-->
+
+        <!--Commercial-->
+            {{ include('/user/_panel_mon_commercial.html.twig') }}
+        <!--Commercial-->
         
         <!--Password-->
             {{ include('/user/_panel_changer_mot_de_passe.html.twig') }}
