--- a/public/css/app.css
+++ b/public/css/app.css
@@ -819,3 +819,18 @@ transform: translate(-50%, -50%);
         font-size: .7rem;
     }
 }
+
+#hero::before,
+#actu::before,
+#about::before,
+#valeurs::before,
+#difference::before,
+#objectifs::before,
+#contact::before
+ {
+    display: block; 
+    content: " "; 
+    margin-top: -75px; 
+    height: 75px; 
+    visibility: hidden; 
+}
