--- a/public/css/app.css
+++ b/public/css/app.css
@@ -137,7 +137,7 @@ li {
 #nav {
     display: flex;
     justify-content: center;
-    padding: 20px 0px;
+    /* padding: 10px 0px; */
 }
 
 #logo {
@@ -832,3 +832,27 @@ transform: translate(-50%, -50%);
     visibility: hidden; 
 }
 
+@media only screen and (max-width: 1400px) {
+    h2 {
+        font-size: 2.5rem;
+    }
+
+    h3 {
+        font-size: 1.5rem;
+    }
+
+    h4 {
+        font-size: 1rem;
+    }
+
+    .valeurs-img {
+        width: 75px;
+        height: 75px;
+    }
+}
+
+@media only screen and (max-width: 834px) {
+    .valeurs > #ephemeride {
+        display: none;
+    }
+}
