--- a/templates/security/password.html.twig
+++ b/templates/security/password.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Mot de passe oublié{% endblock %}
 
 {% block body %}
     <div class="container py-5 d-flex justify-content-center">
