--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <!-- Bootstrap Container -->
-    <div class="container-fluid p-0 bg-white">
+    <div class="container-fluid p-0">
         <!-- H E A D E R  S E C T I O N -->
         <header class="header">
             <!-- H E R O  S E C T I O N -->
@@ -22,26 +22,26 @@
         <main class="main container p-0">
             <!-- Citation Actu -->
             {% if articles is not empty %}
-            <section id="actu" class="container-fluid p-0 text-center py-3">
+            <section id="actu" class="container-fluid p-0 text-center pb-5">
                 <!-- Section heading -->
                 <h2 class="titre font-weight-bold my-5">Les dernières actualités</h2>
                 <!-- Début du carousel -->
 
                 <div class="bd-example">
-                    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                    <div id="carouselArticles" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                         {% for i in 1..articles|length %}
-                        <li data-target="#carouselExampleCaptions" data-slide-to="{{ i - 1 }}" class="{{ i == 1 ? 'active' }}"></li>
+                        <li data-target="#carousselArticles" data-slide-to="{{ i - 1 }}" class="{{ i == 1 ? 'active' }}"></li>
                         {% endfor %}
                         </ol>
                         <div class="carousel-inner carousel-article-wrapper">
                         {% for post in articles %}
                         <div class="carousel-item {{ (loop.first) ? 'active' }}">
-                            <div class="card mb-3" style="background:#abe8b863; border: none">
+                            <div class="card mb-3">
                                 {% if post.picture is not null %}
                                     <img class="card-img-top" style="max-height: 400px" src="{{ vich_uploader_asset(post, 'pictureFile') }}" alt="{{ post.title|default('illustration de l\'article') }}" />
                                 {% endif %}
-                                <div class="card-body" style="background:#abe8b863;">
+                                <div class="card-body bg-light">
                                     <h3 class="card-title">{{post.title}}</h3>
                                     <p class="card-text">
                                         {{ post.content|striptags|truncate(600, true) }}
@@ -59,16 +59,6 @@
                         </div>
                         {% endfor %}
                         </div>
-                        {% if articles|length > 1 %}
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                        {% endif %}
                  </div>
                 {# <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -85,7 +75,7 @@
             {% endif %}
                         
             <!-- Citation Section -->
-            <section id="about" class="container-fluid p-0 text-center py-3 mt-5">
+            <section id="about" class="container-fluid p-0 text-center py-5">
                 <!-- Section heading -->
                 <h2 class="titre h2-responsive font-weight-bold">Qui sommes-nous ?</h2>
                 <div class="wrapper-carousel-fix">
