--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -73,6 +73,9 @@
             </div>
             </div>
 <!-- fin du carousel -->
+            <div class="deck">
+                {{ include('/home/_articles.html.twig') }}
+            </div>
             </section>
             {% endif %}
                         
