--- a/templates/home/_articles.html.twig
+++ b/templates/home/_articles.html.twig
@@ -6,15 +6,9 @@
         {% endif %}
         <div class="card-body bg-light">
             <h5 class="card-title text-center">{{ post.title|default('') }}</h5>
-            <p class="card-text text-center">
-                {{ post.content|striptags|truncate(600, true) }}
-                {% if post.content|striptags|length > 600 %}
-                    <br/>
-                    <a class="btn btn-success button-actu m-2" href="{{ path('blog_single', {'slug': post.slug}) }}">
-                        Lire la suite
-                    </a>
-                {% endif %}
-            </p>
+            <div class="card-text text-center">
+                {{ post.content }}
+            </div>
             <p class="card-text">
                 <small class="text-muted">Posté le {{post.createdAt|date("d/m/y")}} par 
                     <cite title="auteur">
@@ -26,3 +20,4 @@
     </div>
     {% endfor %}
 </div>
+
