modifié affichage des articles

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -19,7 +19,7 @@
             </section>
         </header>
         <!-- M A I N  S E C T I O N -->
-        <main class="main container p-0">
+        <main class="main container-fluid p-0">
             <!-- Citation Actu -->
             {% if articles is not empty %}
             <section id="actu" class="container-fluid p-0 text-center pb-5">
@@ -32,7 +32,7 @@
             {% endif %}
                         
             <!-- Citation Section -->
-            <section id="about" class="container-fluid p-0 text-center py-5">
+            <section id="about" class="container p-0 text-center py-5">
                 <!-- Section heading -->
                 <h2 class="titre h2-responsive font-weight-bold">Qui sommes-nous ?</h2>
                 <div class="wrapper-carousel-fix">
