modifié affichage des articles

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -22,7 +22,7 @@
         <main class="main container-fluid p-0">
             <!-- Citation Actu -->
             {% if articles is not empty %}
-            <section id="actu" class="container-fluid p-0 text-center pb-5">
+            <section id="actu" class="container p-0 text-center pb-5">
                 <!-- Section heading -->
                 <h2 class="titre font-weight-bold my-5">Les dernières actualités</h2>
                 <div class="deck">
@@ -32,7 +32,7 @@
             {% endif %}
                         
             <!-- Citation Section -->
-            <section id="about" class="container p-0 text-center py-5">
+            <section id="about" class="container-fluid p-0 text-center py-5">
                 <!-- Section heading -->
                 <h2 class="titre h2-responsive font-weight-bold">Qui sommes-nous ?</h2>
                 <div class="wrapper-carousel-fix">
