modifié affichage du carrousel

--- a/templates/home/_nosdifferences.html.twig
+++ b/templates/home/_nosdifferences.html.twig
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="carousel-item">
-        <img class="carousel-img w-100" src="{{ asset('images/equipe.jpg') }}" style="height: 500px !important;object-fit: cover; filter: blur(15px) grayscale(30%);" alt="">
+        <img class="carousel-img w-100" src="{{ asset('images/equipe.jpg') }}" style="height: 500px !important;object-fit: cover; filter: blur(15px) opacity(80%);" alt="">
         <div class="carousel-caption d-none d-sm-block">
             <h5 class="font-weight-bold h5">Toute votre équipe au coeur de nos préoccupations</h5>
             <p>Une approche innovante de la formation et des supports techniques éprouvés</p>
