--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -40,7 +40,7 @@
                     <div id="carousel-example-1" class="carousel no-flex testimonial-carousel slide carousel-fade" data-ride="carousel"
                     data-interval="false">
                     <!--Slides-->
-                    <div class="carousel-inner" role="listbox">
+                    <div class="carousel-inner" style="background-color: #abe8b863;" role="listbox">
                         <!--First slide-->
                         <div class="carousel-item active">
                             <div class="testimonial">
