--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,3 +1,6 @@
+/* imports */
+@import 'bootstrap';
+
 /* Fonts */
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap');
 
@@ -88,9 +91,9 @@ li {
     justify-content: center;
 
     background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #hero > div > h1 {
@@ -463,7 +466,7 @@ td > a > i:hover {
 
 /* Parallax */
 #parallax {
-    background-image: url('/images/teamwork.jpg');
+    background-image: url('./../images/teamwork.jpg');
     background-size: cover;
     background-attachment: fixed;
     max-width: 100vw;
