--- a/templates/backend/partials/_navbar.html.twig
+++ b/templates/backend/partials/_navbar.html.twig
@@ -7,7 +7,7 @@
             {% if theme.picture is defined %}
                 <img src="{{ vich_uploader_asset(theme, 'pictureFile') }}" width="200" height="70" alt="Ynovagroup Logo">
             {% else %}
-                <img src="{{ asset('images/ynovagroup_logo.png') }}" width="200" height="70" alt="Ynovagroup Logo">
+                <img src="{{ asset('build/ynovagroup_logo.png') }}" width="200" height="70" alt="Ynovagroup Logo">
             {% endif %}
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
