--- a/templates/bundles/TwigBundle/Exception/error503.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error503.html.twig
@@ -7,7 +7,7 @@
     <h1 class="text-success">Notre site est actuellement en maintenance</h1>
     <p class="text-success">Veuillez nous excuser pour la gêne occasionnée. Nous serons de retour très rapidement.</p>
     <p class="text-success">Nous sommes toujours joignable par téléphone au <a href="tel:+33982385456">+33 (0)9 82 38 54 56</a> et par e-mail à l'adresse <a href="mailto:contact@ynovagroup.com">contact@ynovagroup.com</a></p>
-    <img src="{{ asset('images/cable.png') }}" alt="">
+    <img src="{{ asset('build/cable.png') }}" alt="">
 
 </div>
 {% endblock %}
