--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -8,7 +8,7 @@
         <!-- H E A D E R  S E C T I O N -->
         <header class="header">
             <!-- H E R O  S E C T I O N -->
-            <section id="hero" src="{{ asset('images/ynovagroup_hero.jpg') }}" class="jumbotron-fluid container-fluid text-center img-fluid">
+            <section id="hero" src="{{ asset('build/ynovagroup_hero.jpg') }}" class="jumbotron-fluid container-fluid text-center img-fluid">
                 <div class="jumbotron-fluid container-fluid text-center">
                     <h1 class="display-4 text-uppercase">Ynovagroup</h1>
                     <p class="lead">Nous sommes LE groupement de pharmaciens indépendants</p>
@@ -89,7 +89,7 @@
                                 {% if theme.picture is defined %}
                                     <img class="img-fluid" width="300" height="100" src="{{ vich_uploader_asset(theme, 'pictureFile') }}" alt="{{ theme.name|default('logo Ynovagroup') }}">
                                 {% else %}
-                                    <img class="img-fluid" width="300" height="100" src="{{ asset('images/ynovagroup_logo.png') }}" alt="logo Ynovagroup">
+                                    <img class="img-fluid" width="300" height="100" src="{{ asset('build/ynovagroup_logo.png') }}" alt="logo Ynovagroup">
                                 {% endif %}
                                 </div>
                                 <h6 class="font-weight-bold">Votre groupement de pharmaciens indépendants</h6>
@@ -102,7 +102,7 @@
             <div class="container-fluid p-0 text-center my-5">
                 <h2 class="titre-valeurs text-center h2-responsive font-weight-bold my-5">Nos valeurs</h2>
                 <div class="valeurs">
-                    <img class="valeurs-img" src="{{ asset('images/respect.png') }}" alt="" width="250" height="250">
+                    <img class="valeurs-img" src="{{ asset('build/respect.png') }}" alt="" width="250" height="250">
                     <div class="valeurs-text m-5">
                         <h3 class="valeurs-text-title text-uppercase">Respect</h3>
                             <p class="m-5 font-weight-lighter font-italic">
@@ -112,14 +112,14 @@
                      {% if theme.picture is defined %}
                         <img class="valeurs-logo reveal-2" id="{{ current == 'home'? 'ephemeride' : 'logo'}}" src="{{ vich_uploader_asset(theme, 'pictureFile') }}"  alt="">
                     {% else %}
-                        <img class="valeurs-logo reveal-2" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
+                        <img class="valeurs-logo reveal-2" src="{{ asset('build/ynovagroup_logo.png') }}" alt="">
                     {% endif %}
                 </div>
             </div>  
             <!-- Satisfaction -->
             <div class="container-fluid p-0 text-center my-5">
                 <div class="valeurs">
-                <img class="valeurs-img" src="{{ asset('images/smile.png') }}" alt="" width="250" height="250">
+                <img class="valeurs-img" src="{{ asset('build/smile.png') }}" alt="" width="250" height="250">
                     <div class="valeurs-text m-5">
                         <h3 class="valeurs-text-title text-uppercase">Satisfaction</h3>
                             <p class="m-5 font-weight-lighter font-italic">
@@ -129,14 +129,14 @@
                      {% if theme.picture is defined %}
                         <img class="valeurs-logo reveal-2" id="{{ current == 'home'? 'ephemeride' : 'logo'}}" src="{{ vich_uploader_asset(theme, 'pictureFile') }}"  alt="">
                     {% else %}
-                        <img class="valeurs-logo reveal-2" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
+                        <img class="valeurs-logo reveal-2" src="{{ asset('build/ynovagroup_logo.png') }}" alt="">
                     {% endif %}
                 </div>
             </div>  
             <!-- Soutien -->
             <div class="container-fluid p-0 text-center my-5">
                 <div class="valeurs">
-                    <img class="valeurs-img" src="{{ asset('images/information.png') }}" alt="" width="250" height="250">
+                    <img class="valeurs-img" src="{{ asset('build/information.png') }}" alt="" width="250" height="250">
                     <div class="valeurs-text m-5">
                         <h3 class="valeurs-text-title text-uppercase">Soutien</h3>
                             <p class="m-5 font-weight-lighter font-italic">
@@ -146,14 +146,14 @@
                      {% if theme.picture is defined %}
                         <img class="valeurs-logo reveal-2" id="{{ current == 'home'? 'ephemeride' : 'logo'}}" src="{{ vich_uploader_asset(theme, 'pictureFile') }}"  alt="">
                     {% else %}
-                        <img class="valeurs-logo reveal-2" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
+                        <img class="valeurs-logo reveal-2" src="{{ asset('build/ynovagroup_logo.png') }}" alt="">
                     {% endif %}
                 </div>
             </div>  
             <!-- Engagement -->
             <div class="container-fluid p-0 text-center my-5">
                 <div class="valeurs">
-                    <img class="valeurs-img" src="{{ asset('images/network.png') }}" alt="" width="250" height="250">
+                    <img class="valeurs-img" src="{{ asset('build/network.png') }}" alt="" width="250" height="250">
                     <div class="valeurs-text m-5">
                         <h3 class="valeurs-text-title text-uppercase">Engagement</h3>
                             <p class="m-5 font-weight-lighter font-italic">
@@ -163,14 +163,14 @@
                      {% if theme.picture is defined %}
                         <img class="valeurs-logo reveal-2" id="{{ current == 'home'? 'ephemeride' : 'logo'}}" src="{{ vich_uploader_asset(theme, 'pictureFile') }}"  alt="">
                     {% else %}
-                        <img class="valeurs-logo reveal-2" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
+                        <img class="valeurs-logo reveal-2" src="{{ asset('build/ynovagroup_logo.png') }}" alt="">
                     {% endif %}
                 </div>
             </div> 
             <!-- Partage -->
             <div class="container-fluid p-0 text-center my-5">
                 <div class="valeurs">
-                    <img class="valeurs-img" src="{{ asset('images/share.png') }}" alt="" width="250" height="250">
+                    <img class="valeurs-img" src="{{ asset('build/share.png') }}" alt="" width="250" height="250">
                     <div class="valeurs-text m-5">
                         <h3 class="valeurs-text-title text-uppercase">Partage</h3>
                             <p class="m-5 font-weight-lighter font-italic">
@@ -180,14 +180,14 @@
                      {% if theme.picture is defined %}
                         <img class="valeurs-logo reveal-2" id="{{ current == 'home'? 'ephemeride' : 'logo'}}" src="{{ vich_uploader_asset(theme, 'pictureFile') }}"  alt="">
                     {% else %}
-                        <img class="valeurs-logo reveal-2" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
+                        <img class="valeurs-logo reveal-2" src="{{ asset('build/ynovagroup_logo.png') }}" alt="">
                     {% endif %}
                 </div>
             </div>  
             <!-- Excellence -->
             <div class="container-fluid p-0 text-center my-5">
                 <div class="valeurs">
-                    <img class="valeurs-img" src="{{ asset('images/review.png') }}" alt="" width="250" height="250">
+                    <img class="valeurs-img" src="{{ asset('build/review.png') }}" alt="" width="250" height="250">
                     <div class="valeurs-text m-5">
                         <h3 class="valeurs-text-title text-uppercase">Excellence</h3>
                             <p class="m-5 font-weight-lighter font-italic">
@@ -197,7 +197,7 @@
                      {% if theme.picture is defined %}
                         <img class="valeurs-logo reveal-2" id="{{ current == 'home'? 'ephemeride' : 'logo'}}" src="{{ vich_uploader_asset(theme, 'pictureFile') }}"  alt="">
                     {% else %}
-                        <img class="valeurs-logo reveal-2" src="{{ asset('images/ynovagroup_logo.png') }}" alt="">
+                        <img class="valeurs-logo reveal-2" src="{{ asset('build/ynovagroup_logo.png') }}" alt="">
                     {% endif %}
                 </div>
             </div>
@@ -268,7 +268,7 @@
                     </div>    
                 </div>  
             </section>
-            {# <div id="parallax" src="{{ asset('images/ynovagroup_hero.jpg') }}" class="container-fluid" data-type="background" data-speed="3">
+            {# <div id="parallax" src="{{ asset('build/ynovagroup_hero.jpg') }}" class="container-fluid" data-type="background" data-speed="3">
                 
             </div> #}
             <section 
