done: passé site sous webpack avec yarn

--- a/assets/css/backend.scss
+++ b/assets/css/backend.scss
@@ -1,5 +1,10 @@
+/* imports */
+@import 'bootstrap';
+
 /* Fonts */
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap');
+@import "@fortawesome/fontawesome-free/css/all";
+@import "datatables.net-bs4/css/dataTables.bootstrap4";
 
 /* Navigation Adhérents Button */
 
