--- a/templates/partials/_rgpd.html.twig
+++ b/templates/partials/_rgpd.html.twig
@@ -21,20 +21,7 @@
         </div>
     </div>
 </div>
-
 <script>
-$(window).on('load', function () {
-    $('#myModal').modal('show');
-});
-
-$(window).on('click', function () {
-    $('#myModal').modal('hide');
-});
-
-$('#myModal').on('hide.bs.modal', function () {
-    $.ajax({
-        method: 'POST',
-        url: '{{ path('accept_cookies')|escape('js') }}'
-    })
-})
+const url = "{{ path('accept_cookies')|escape('js') }}";
 </script>
+{{ encore_entry_script_tags('rgpd') }}
