--- a/templates/user/_panel_mon_profil.html.twig
+++ b/templates/user/_panel_mon_profil.html.twig
@@ -1,7 +1,7 @@
 <div class="tab-pane fade {{ (activePanel == 'profil')? 'show active' }} p-3" id="profil" role="tabpanel" aria-labelledby="profil-tab">    
     <h5 class="h2 font-weight-bold text-success">Mon profil</h5>
     <div>
-        {% if user.company is defined and company.picture is not null %}
+        {% if user.company is defined and user.company.picture is not null %}
             <img class="img-fluid" src="{{ vich_uploader_asset(user.company, 'pictureFile') }}" alt="{{ company.name|default('photo de la pharmacie') }}" />
         {% else %}
             <img src="https://via.placeholder.com/468x200?text=Image+de+la+pharmacie" class="img-fluid" alt="..."> 
