--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,8 +1,9 @@
 /* imports */
-@import 'bootstrap';
+@import "~bootstrap/scss/bootstrap";
 
 /* Fonts */
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap');
+@import "@fortawesome/fontawesome-free/css/all";
 
 html, body {
   height: 100%;
